made the website

--- a/index.html
+++ b/index.html
@@ -12,9 +12,24 @@
 </head>
 
 <body>
+    <header>
+
+    </header>
+    <main>
+        <section>
+            <div class="d-flex flex-column align-items-center mb-5">
+                <h2 class="text-center badge bg-danger text-wrap fs-1 mb-2">My Meals</h2>
+                <button onclick="loadPage()" class="btn btn-primary">click me for db</button>
+            </div>
+
+            <div id='meals-container' class="p-5 row row-cols-1 row-cols-md-3 g-4">
+            </div>
+        </section>
+    </main>
 
 
-
+    <!-- js -->
+    <script src="js/mealapi.js"></script>
 
 
     <!-- bootstrap -->
